删除token (#31)